--- a/SLCVA-FE/package.json
+++ b/SLCVA-FE/package.json
@@ -21,6 +21,7 @@
     "@nextui-org/progress": "^2.0.34",
     "@nextui-org/radio": "^2.1.5",
     "@nextui-org/react": "^2.4.8",
+    "@nextui-org/snippet": "^2.0.43",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/table": "^2.0.40",
     "@nextui-org/theme": "^2.2.11",
@@ -34,6 +35,7 @@
     "react": "^18",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
