--- a/SLCVA-FE/package.json
+++ b/SLCVA-FE/package.json
@@ -36,6 +36,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "tailwind-merge": "^2.6.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
