--- a/SLCVA-FE/package.json
+++ b/SLCVA-FE/package.json
@@ -27,16 +27,18 @@
     "@nextui-org/theme": "^2.2.11",
     "@nextui-org/tooltip": "^2.0.41",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@types/recharts": "^1.8.29",
     "apexcharts": "^4.1.0",
     "flatpickr": "^4.6.13",
     "framer-motion": "^11.13.1",
     "jsvectormap": "^1.6.0",
     "lucide-react": "^0.466.0",
-    "next": "^13.2.4",
+    "next": "^15.1.7",
     "react": "^18",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.23.8"
   },
